--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ line_length=120                # corresponds to -w  flag
 multi_line_output=3            # corresponds to -m  flag
 include_trailing_comma=true    # corresponds to -tc flag
 skip_glob = '^((?!py$).)*$'    # sort all Python files
+known_third_party = []
 
 [tool.poetry.dependencies]
 python = "^3.6"
