--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,4 +40,4 @@ jobs:
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USER }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: twine upload --verbose dist/*
+      run: twine upload --verbose dist/* || echo 'File exists'
